<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        <!-- android:background="@color/fondo" -->
        <TextView
            android:id="@+id/miTitulo"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="5sp"
            android:background="@drawable/titulo_fondo"
            android:paddingLeft="8sp"
            android:paddingTop="16sp"
            android:paddingRight="8sp"
            android:paddingBottom="16sp"
            android:text=""
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="373dp"
            android:layout_height="290dp"
            android:layout_marginTop="100sp"
            android:contentDescription="@string/userRes"
            android:src="@drawable/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/miNombre"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="420sp"
            android:layout_marginEnd="5sp"
            android:background="@drawable/titulo_fondo"
            android:paddingLeft="8sp"
            android:paddingTop="5sp"
            android:paddingRight="8sp"
            android:paddingBottom="5sp"
            android:text=""
            android:textAlignment="textStart"
            android:textColor="@color/textoFore"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="415sp"
            android:autofillHints="Nombre"
            android:ems="10"
            android:hint="@string/uName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/select"
            android:textColorHint="#BCAAA4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/miApellido"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="460sp"
            android:layout_marginEnd="5sp"
            android:background="@drawable/titulo_fondo"
            android:paddingLeft="8sp"
            android:paddingTop="5sp"
            android:paddingRight="8sp"
            android:paddingBottom="5sp"
            android:text=""
            android:textAlignment="textStart"
            android:textColor="@color/textoFore"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="455sp"
            android:autofillHints="Apellido"
            android:ems="10"
            android:hint="@string/uSur"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/select"
            android:textColorHint="#BCAAA4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/miMail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="500sp"
            android:layout_marginEnd="5sp"
            android:background="@drawable/titulo_fondo"
            android:paddingLeft="8sp"
            android:paddingTop="5sp"
            android:paddingRight="8sp"
            android:paddingBottom="5sp"
            android:text=""
            android:textAlignment="textStart"
            android:textColor="@color/textoFore"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="495sp"
            android:autofillHints="Email"
            android:ems="10"
            android:hint="@string/uMai"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/select"
            android:textColorHint="#BCAAA4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/miEnvio"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boton_color"
            android:contentDescription="@string/miDesc"
            android:onClick="botonClick"
            android:paddingTop="5sp"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <ImageView
            android:id="@+id/botonTema"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/luna"
            android:layout_gravity="end"
            android:padding="16dp"
            android:background="@drawable/boton_tema"
            android:onClick="cambioTema"
            android:contentDescription="@string/userTema"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/miEnvio" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>